[gd_scene load_steps=6 format=3 uid="uid://bl022wbkuohoj"]

[ext_resource type="Script" path="res://assets/scripts/elegir_nucleo.gd" id="1_h0i8w"]
[ext_resource type="Texture2D" uid="uid://bduijvxd577ye" path="res://assets/sprites/intro/intro_frame01.png" id="1_oplm7"]
[ext_resource type="Texture2D" uid="uid://c7qcjrfymq74c" path="res://assets/sprites/intro/intro_frame02.png" id="2_cl7xn"]
[ext_resource type="Texture2D" uid="uid://d3qp10og0tw71" path="res://assets/sprites/intro/intro_frame03.png" id="3_ua1m2"]
[ext_resource type="PackedScene" uid="uid://drx5frcgg37qy" path="res://scenes/llamada_s.tscn" id="4_1phu5"]

[node name="ElegirNucleo" type="Node2D"]
script = ExtResource("1_h0i8w")

[node name="Borde" type="Node2D" parent="."]

[node name="Frame" type="TextureRect" parent="Borde"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 58.0
offset_top = 50.0
offset_right = 1866.0
offset_bottom = 1004.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_oplm7")
metadata/_edit_use_anchors_ = true

[node name="FrameDetail" type="TextureRect" parent="Borde"]
offset_left = 1491.0
offset_top = 744.0
offset_right = 1882.0
offset_bottom = 1018.0
texture = ExtResource("2_cl7xn")

[node name="FrameDetail2" type="TextureRect" parent="Borde"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1864.0
offset_top = 50.0
offset_right = 1904.0
offset_bottom = 262.0
grow_vertical = 0
texture = ExtResource("3_ua1m2")

[node name="Linea1" parent="." instance=ExtResource("4_1phu5")]
position = Vector2(176, 144)

[node name="Linea2" parent="." instance=ExtResource("4_1phu5")]
position = Vector2(757, 144)

[node name="Linea3" parent="." instance=ExtResource("4_1phu5")]
position = Vector2(1348, 144)

[node name="Linea4" parent="." instance=ExtResource("4_1phu5")]
position = Vector2(462, 584)

[node name="Linea5" parent="." instance=ExtResource("4_1phu5")]
position = Vector2(1069, 584)
